--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,11 @@
         ]
       }
     ],
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "react/state-in-constructor": [
+      1,
+      "never"
+    ],
+    "no-console": "off"
   }
 }
